fix bug with winner & add error

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,8 @@
   background-size: 200% auto;
   animation: gradient-animation 3s ease-in-out infinite;
 }
+
+/* progress bars to toasts */
+.red-progress-bar {
+  background: #E53E3E !important; /* Насыщенный красный цвет */
+}
